--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
@@ -16,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-dotenv": "^3.4.8",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
