Photo for new-admission completed

--- a/app.json
+++ b/app.json
@@ -5,6 +5,22 @@
       "bundler": "metro"
     },
     "name": "chss-chattanchal-mobile-app",
-    "slug": "chss-chattanchal-mobile-app"
+    "slug": "chss-chattanchal-mobile-app",
+
+    "plugins": [
+      [
+        "expo-barcode-scanner",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
+        }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
+        }
+      ]
+    ]
   }
 }
+
