--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
     "axios": "^1.3.6",
     "expo": "^48.0.7",
+    "expo-barcode-scanner": "^12.3.2",
+    "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
+    "expo-image-manipulator": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.1",
@@ -16,10 +20,11 @@
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "^0.71.6",
     "react-native-dotenv": "^3.4.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-editor": "^0.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
