--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "axios": "^1.3.6",
-    "expo": "^48.0.7",
-    "expo-barcode-scanner": "^12.3.2",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-image-manipulator": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.71.6",
+    "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
